--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Poppins font */
+.pop {
+  font-family: "Poppins", sans-serif;
+}
